I continued the development

--- a/cart.html
+++ b/cart.html
@@ -74,7 +74,8 @@
 
           <div><tr>
             <div>
-                <td><button class="danger" type="button"><i class="fas fa-trash-alt"></i></button></td>
+                <td><a href="#"><i class="fas fa-trash-alt"></i>
+                </a></td>
             </div>
                 <td><img src="images/10.png"></td>
                 <td>
@@ -123,7 +124,7 @@
                 <h6>Total</h6> 
                 <p>$303.35</p>
             </div>
-            <button class="pay">PROCEED TO CHECKOUT</button>
+            <button class="pay">MAKE PAYMENT</button>
         </div>
     </div>
 
